feat(bff): 新增openurl清空对话接口
